on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.6.3 (2007-11-28) -----

2007-12-17, cfalonso
  Fixed problem of duplicate transactions in IE6 & IE7
    - zentrack_2/includes/headerInc.php 1.81
  Fixed problem of loosing custom_menu fields in IE6 & IE7
    - zentrack_2/includes/templates/fields/menunokeys.template 1.5
  Merge empty change (can be ignored)
    - zentrack_2/www/javascript.js 1.33

2007-12-17, cfalonso
  Fix to allow creator_id as a menu in ticket_list_filters view
    - zentrack_2/includes/ZenFieldMap.class 1.53
    - zentrack_2/includes/zenTrack.class 1.230

2007-11-29, kato
  Prepared install/upgrade docs and scripts
    - zentrack_2/UPGRADE.txt
    - zentrack_2/install/build_mysql.sql
    - zentrack_2/install/build_mssqlserver.sql
    - zentrack_2/install/build_postgres.sql
    - zentrack_2/install/build_oracle.sql
    - zentrack_2/install/seed_mssqlserver.sql
    - zentrack_2/install/seed_mysql.sql
    - zentrack_2/install/seed_oracle.sql
    - zentrack_2/install/seed_postgres.sql
    - zentrack_2/install/UPGRADE_mssqlserver.sql
    - zentrack_2/install/UPGRADE_mysql.sql
    - zentrack_2/install/UPGRADE_oracle.sql
    - zentrack_2/install/UPGRADE_postgres.sql
    - zentrack_2/install/previous/2.6.2.UPGRADE_mssqlserver.sql 1.1
    - zentrack_2/install/previous/2.6.2.UPGRADE_mysql.sql 1.1
    - zentrack_2/install/previous/2.6.2.UPGRADE_oracle.sql 1.1
    - zentrack_2/install/previous/2.6.2.UPGRADE_postgres.sql 1.1
  Fixed hot keys broken by Firefox changes (accesskey works with alt+shift instead of alt now)
    - zentrack_2/includes/ZenHotKeys.class 1.26

2007-11-28, kato
  Fixed cr/lf problems with emails sent that included logs/ticket descriptions